--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ReactPatterns",
+  "name": "NodejsPatterns",
   "version": "1.0.0",
-  "description": "A collection of simple react projects providing reusable components, startup and test examples.",
+  "description": "A collection of simple node.js-react.js projects providing test examples.",
   "license": "MIT",
   "author": {
     "name": "Janaka Stevens",
@@ -9,10 +9,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/calitek/ReactPatterns.git"
+    "url": "git+https://github.com/calitek/NodejsPatterns.git"
   },
   "bugs": {
-    "url": "https://github.com/calitek/ReactPatterns/issues"
+    "url": "https://github.com/calitek/NodejsPatterns/issues"
   },
   "keywords": [
     "react",
