--- a/DataAccess/MongoDB/package.json
+++ b/DataAccess/MongoDB/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "start": "node js/server.js",
-    "ww": "webpack --progress --profile --colors --no-minimize --watch",
-    "nw": "webpack --progress --profile --colors --no-minimize"
+    "ww": "webpack --progress --profile --colors --env.noMinimize --watch",
+    "nw": "webpack --progress --profile --colors --env.noMinimize"
   },
   "dependencies": {
     "body-parser": "latest",
@@ -24,18 +24,21 @@
     "serve-favicon": "latest"
   },
   "devDependencies": {
+    "react": "^15.0.0",
+    "react-dom": "^15.0.0",
+    "reflux": "latest",
+    "superagent": "latest",
+
     "babel-core": "latest",
     "babel-loader": "^6.1.0",
     "babel-preset-es2015": "latest",
     "babel-preset-react": "latest",
     "babel-preset-stage-0": "latest",
     "css-loader": "latest",
-    "extract-text-webpack-plugin": "latest",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "file-loader": "latest",
-    "react": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "reflux": "latest",
-    "superagent": "latest",
+    "loader-utils": "latest",
+    "style-loader": "^0.13.1",
     "webpack": "latest"
   }
 }
